--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@
       href='https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&display=swap'
       rel='stylesheet'
     />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <meta name='generator' content={Astro.generator} />
     <title>teplostan.ski</title>
   </head>
