--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,12 +33,12 @@ const selectedLinks = { email, github, telegram, bsky }
   .h1::before {
     content: '<h1>';
     color: gray;
-    font-size: 1.5rem;
+    font-size: 0.8em;
   }
   .h1::after {
     content: '</h1>';
     color: gray;
-    font-size: 1.5rem;
+    font-size: 0.8em;
   }
   .p::before {
     content: '<p>';
