--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,12 +23,15 @@
   </body>
 </html>
 
-<style>
+<style is:global>
   html,
   body {
     margin: 0;
     width: 100%;
     height: 100%;
     font-family: 'Cousine', monospace;
+  }
+  h1 {
+    font-size: 1.5em;
   }
 </style>
