--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Layout from '../layouts/Layout.astro'
 import styles from './index.module.css'
 import { links } from './links'
-const { email, github, telegram, bsky } = links
-const selectedLinks = { email, github, telegram, bsky }
+const { email, github, codeberg, telegram, bsky, keyoxide } = links
+const selectedLinks = { email, github, codeberg, telegram, bsky, keyoxide }
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
