--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,8 @@
 import Layout from '../layouts/Layout.astro'
 import styles from './index.module.css'
 import { links } from './links'
-const { email, github, codeberg, telegram, bsky, keyoxide } = links
-const selectedLinks = { email, github, codeberg, telegram, bsky, keyoxide }
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const selectedKeys = ['email', 'github', 'codeberg', 'telegram', 'bsky', 'keyoxide'] as const
+const selected = selectedKeys.map((k) => links[k])
 ---
 
 <Layout>
@@ -18,7 +16,7 @@ const selectedLinks = { email, github, codeberg, telegram, bsky, keyoxide }
   </p>
   <ul class='ul'>
     {
-      Object.entries(selectedLinks).map(([_key, { label, link }]) => (
+      selected.map(({ label, link }) => (
         <li>
           <a href={link} target='_blank' rel='noopener noreferrer'>
             <span>{label}</span>
