--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,12 @@
 <!doctype html>
-<html lang='ru'>
+<!--
+      привет!   
+     /          
+  >(.)__,       
+   (___/  t10i  
+~~~~~~~~~~~~~~~~~
+-->
+<html lang='en'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
