--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-      привет!   
+      кря!   
      /          
   >(.)__,       
    (___/  t10i  
@@ -22,6 +22,7 @@
       rel='stylesheet'
     />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="author" href="/index.html">
     <meta name='generator' content={Astro.generator} />
     <title>teplostan.ski</title>
   </head>
