--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const selected = selectedKeys.map((k) => links[k])
     {
       selected.map(({ label, link }) => (
         <li>
-          <a href={link} target='_blank' rel='noopener noreferrer' rel='me'>
+          <a href={link} target='_blank' rel='noopener noreferrer me'>
             <span>{label}</span>
           </a>
         </li>
