--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,8 @@
 <!doctype html>
 <!--
-      кря!   
-     /          
-  >(.)__,       
-   (___/  t10i  
-~~~~~~~~~~~~~~~~~
+╭─────╮  keep calm,         
+│ ◠ ◡ ◠   Igor coded this ☕
+╰─────╯                     
 -->
 <html lang='en'>
   <head>
