chore: change domain teplostan.ski to teplostanski.me

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,10 @@
 <!doctype html>
 <!--
-╭─────╮  keep calm,         
-│ ◠ ◡ ◠   Igor coded this ☕
-╰─────╯                     
+╭─────╮ ✧
+│ ◠ ◡ ◠
+╰─────╯
+keep calm,
+Igor coded this!
 -->
 <html lang='en'>
   <head>
@@ -27,7 +29,7 @@
       content='Igor Teplostanski, Igor Teplostansky, Игорь Теплостанский, JavaScript developer, TypeScript developer, Frontend developer, Web, Open Source'
     />
     <meta name='generator' content={Astro.generator} />
-    <title>teplostan.ski</title>
+    <title>teplostanski.me</title>
   </head>
   <body>
     <div class='container'>
